FINALLY fix the tab spacing

--- a/frontend/lyric-sync-app/src/pages/SongPlayerPage/SongPlayerPage.scss
+++ b/frontend/lyric-sync-app/src/pages/SongPlayerPage/SongPlayerPage.scss
@@ -17,14 +17,15 @@
 
       .right-grid-parent {
         height: 100%;
+        width: 50%;
         display: flex;
-        flex: 1;
         flex-direction: column;
         background-color: black;
         border-radius: 8px;
-        overflow: auto;
+        // overflow: auto;
         background: linear-gradient(45deg, #8a2be2, #e2e8f085);
         box-shadow: 2px 2px 6px rgba(0, 0, 0, 0.3);
+        max-width: 100%;
         
         .lrc-grid-parent {
           display: flex;
@@ -39,8 +40,9 @@
         .tabs-grid-parent {
           display: flex;
           flex-direction: column;
-          width: fit-content;
-          height: fit-content;
+          width: 100%;
+          // height: fit-content;
+          // overflow: visible;
         }
         
       }
